# aiogram-django-template

./: .dockerignore  .env.dist  .env.example  .env.test  .env.test.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.ci.yaml  docker-compose.local.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run-local.sh
.claude/skills/docs-reader/: SKILL.md
.claude/skills/feature-developer/: SKILL.md
.claude/skills/test-writer/: SKILL.md
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  docs.yaml  integration.yaml  lint_test.yaml
api/: __init__.py
api/common/: routers.py
api/config/: __init__.py  application.py  auth.py  axes.py  base.py  cache.py  celery.py  database.py  logging.py  rest.py  security.py  sentry.py  settings.py  silk.py  spectacular.py  storage.py
api/config/__app_template__/: admin.py-tpl  apps.py-tpl  models.py-tpl  serializers.py-tpl  urls.py-tpl  views.py-tpl
api/user/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/user/migrations/: 0002_createsuperuser.py
api/web/: asgi.py  urls.py  wsgi.py
app/: __init__.py
app/apps/core/: apps.py  models.py  use_case.py
app/config/: __init__.py  application.py  bot.py  database.py  settings.py  web.py
app/config/__app_template__/: apps.py-tpl  models.py-tpl  use_case.py-tpl
app/delivery/bot/: __main__.py
app/delivery/web/: asgi.py  urls.py  wsgi.py
application/: app.py  bot.py  manage.py  server.py
application/apps/core/: __init__.py  app.py  models.py  services.py
application/config/: .env.dist  __init__.py  apps.py  database.py
application/config/app_template/: __init__.py-tpl  app.py-tpl  models.py-tpl  services.py-tpl
application/config/web/: asgi.py  settings.py  urls.py  wsgi.py
bot/: __main__.py  handlers.py
bot/config/: bot.py
docker/: Dockerfile  docker-compose.infra.yaml  docker-compose.yaml
docker/overrides/: docker-compose.local.yaml
docs/: CLAUDE.md  mkdocs.yml
docs/en/: CNAME  contributing.md  getting-started.md  index.md
docs/en/architecture/: index.md
docs/en/bot/: factories.md  handlers.md  index.md
docs/en/celery/: beat-scheduler.md  index.md  task-controllers.md  task-registry.md
docs/en/concepts/: controller-pattern.md  factory-pattern.md  index.md  ioc-container.md  pydantic-settings.md  service-layer.md
docs/en/configuration/: django-adapter.md  environment-variables.md  index.md  production.md
docs/en/deployment/: ci-cd.md  docker-compose.md  index.md  production-checklist.md
docs/en/getting-started/: development-environment.md  index.md  project-structure.md  quick-start.md
docs/en/how-to/: add-celery-task.md  add-new-domain.md  configure-observability.md  custom-exception-handling.md  index.md  override-ioc-in-tests.md  secure-endpoints.md
docs/en/http/: controllers.md  error-handling.md  index.md  jwt-authentication.md  rate-limiting.md  refresh-tokens.md
docs/en/observability/: index.md  instrumented-libraries.md  logfire.md  logging.md  scrubbing.md
docs/en/reference/: docker-services.md  environment-variables.md  external-links.md  index.md  makefile.md
docs/en/testing/: celery-tests.md  django-settings.md  http-tests.md  index.md  mocking-ioc.md  test-factories.md
docs/en/tutorial/: 01-model-and-service.md  02-ioc-registration.md  03-http-api.md  04-celery-tasks.md  05-observability.md  06-testing.md  index.md
docs/en/tutorials/: first-api-endpoint.md  first-bot-command.md  first-celery-task.md  index.md
docs/overrides/templates/: footer.html
src/: manage.py
src/api/: __init__.py
src/api/common/: routers.py
src/api/config/: application.py  auth.py  axes.py  base.py  cache.py  celery.py  database.py  logging.py  rest.py  security.py  settings.py  spectacular.py  storage.py
src/api/configs/: application.py  celery.py  logging.py  security.py  sentry.py  settings.py  silk.py  storage.py
src/api/health/: api.py
src/api/user/: admin.py  api.py  apps.py  auth.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/api/web/: asgi.py  urls.py  wsgi.py
src/bot/: __main__.py  handlers.py
src/bot/configs/: bot.py
src/configs/: core.py  django.py  infrastructure.py  logging.py
src/core/: __init__.py  exceptions.py
src/core/configs/: core.py  django.py  infrastructure.py  settings.py
src/core/health/: services.py
src/core/user/: admin.py  apps.py  models.py  services.py
src/delivery/: __init__.py
src/delivery/bot/: __init__.py  __main__.py  bot.py  (+6 more)
src/infrastructure/: configurator.py
src/ioc/: container.py  registries.py
src/tasks/: __init__.py  app.py  factories.py  registry.py  settings.py
tasks/: __init__.py  app.py
template/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml
tests/: conftest.py
tests/integration/: conftest.py  factories.py  settings.py
tests/unit/: test_example.py
typings/punq/: __init__.pyi
(+108 files in other folders)
