[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "boto3>=1.42.24",
    "cachetools>=6.2.4",
    "celery>=5.6.2",
    "celery-types>=0.24.0",
    "colorlog>=6.10.1",
    "dj-database-url>=3.1.0",
    "django>6",
    "django-configurations[database]>=2.5.1",
    "django-ninja>=1.5.2",
    "django-storages>=1.14.6",
    "django-stubs>=5.2.8",
    "gunicorn>=23.0.0",
    "psycopg[c]>=3.3.2",
    "punq>=0.7.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true


[tool.mypy]
python_version = "3.12"
ignore_missing_imports_per_module = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
strict = false
implicit_reexport = true
exclude = [
    "venv",
    "migrations",
]

[tool.pytest.ini_options]
minversion = "9.0"
DJANGO_SETTINGS_MODULE = "api.configs.settings"
addopts = "--exitfirst -vv --cov --cov-report=html --cov-fail-under=80"
testpaths = [
    "tests",
]
